# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  README.md  generator  solver
include/: RubiksCube.h  RubiksCube3dArray.h  RubiksCubeBitboard.h  Solver.h
include/pattern_databases/: CornerPatternDatabase.h  EdgePatternDatabase.h  PatternDatabase.h
src/: CornerPatternDatabase.cpp  EdgePatternDatabase.cpp  PatternDatabase.cpp  RubiksCube.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp  Solver.cpp  generator.cpp  main.cpp
